[package]
name = "MVCCBPlusTree"
version = "0.0.24"
edition = "2021"
authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
description = "Experimental Concurrency Control CRUD MVB+Tree Implementation"
repository = "https://github.com/umr-dbs/MVCCBPlusTree"

[lib]
name = "mvcc_bplustree"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false

[features]
olc-hle = []
orwc-fair = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
CCBPlusTree = { git = "ssh://git@github.com/umr-dbs/CC-BPlusTree.git", version = "0.0.120" }
arc-swap = "1.7.1"
crossbeam-skiplist = "0.1.3"
chrono = "0.4.42"
rand_distr = "0.5.1"
rand = "0.9.2"
itertools = "0.14.0"
parking_lot = { version = "0.12.4", features = ["hardware-lock-elision"] }
serde = { version ="1.0.223", features = ["derive", "rc"] }
serde_json = { version = "1.0.144" }
crossbeam-channel = "0.5.15"
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.175"
sysinfo = "0.37.0"
raw-cpuid = "11.5.0"