[package]
name = "BTreeVersionChains"
version = "0.0.34"
edition = "2021"
authors = ["Amir Tonta <amir.tonta@mathematik.uni-marburg.de>"]
description = "Experimental Concurrency Control CRUD MVB+Tree Implementation"
repository = "https://github.com/umr-dbs/MVBTree"

#[lib]
#name = "mv_b_tree"
#path = "src/lib.rs"
#crate-type = ["cdylib"]

[profile.dev]
overflow-checks = false

[profile.release]
debug = "line-tables-only"
overflow-checks = false
#opt-level = 3            # maximum LLVM optimizations
#lto = "fat"              # full link-time optimization (cross-crate)
#codegen-units = 1        # better optimization, slower compile
#panic = "abort"          # removes unwinding overhead
#strip = true             # smaller binary (optional)
#debug = 0                # no debug info
#incremental = false      # better optimization consistency

[build]
rustflags = ["-C", "target-cpu=native"]

[features]
olc-hle = []
orwc-fair = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
CCBPlusTree = { git = "ssh://git@github.com/umr-dbs/CC-BPlusTree.git", version = "0.0.121" }
arc-swap = "1.8.1"
crossbeam-skiplist = "0.1.3"
chrono = "0.4.43"
rand_distr = "0.5.1"
rand = "0.9.2"
itertools = "0.14.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
serde = { version ="1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149" }
crossbeam-channel = "0.5.15"
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.180"
sysinfo = "0.37.0"
raw-cpuid = "11.5.0"
num_cpus = "1.17.0"
jemallocator = "0.5.4"